--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-color-mode="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dog searcher</title>
+    <meta name="description" content="My dog searcher test" />
   </head>
   <body>
+    <noscript> You need to enable JavaScript to run this app. </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
